--- a/src/aaly_urdf/config/config.yaml
+++ b/src/aaly_urdf/config/config.yaml
@@ -6,5 +6,5 @@
   # Position Controllers ---------------------------------------
   joint1_position_controller:
     type: effort_controllers/JointPositionController
-    joint: track_creator__j1
+    joint: aaly__j1
     pid: {p: 100.0, i: 0.01, d: 10.0}
