--- a/src/aaly_urdf/config/config_sdf.yaml
+++ b/src/aaly_urdf/config/config_sdf.yaml
@@ -23,3 +23,35 @@ aaly_robot:
   knee_right_front_joint_position_controller:
     type: position_controllers/JointPositionController
     joint: aaly__knee_right_front_joint
+
+  # Position Controllers ---------------------------------------
+  thigh_left_back_joint_position_controller:
+    type: position_controllers/JointPositionController
+    joint: aaly__thigh_left_back_joint
+
+  # Position Controllers ---------------------------------------
+  thigh_left_front_joint_position_controller:
+    type: position_controllers/JointPositionController
+    joint: aaly__thigh_left_front_joint
+
+  # Position Controllers ---------------------------------------
+  thigh_right_back_joint_position_controller:
+    type: position_controllers/JointPositionController
+    joint: aaly__thigh_right_back_joint
+
+  # Position Controllers ---------------------------------------
+  thigh_right_front_joint_position_controller:
+    type: position_controllers/JointPositionController
+    joint: aaly__thigh_right_front_joint
+
+  legs_group_controller:
+    type: "position_controllers/JointTrajectoryController"
+    joints:
+      - aaly__thigh_right_front_joint
+      - aaly__thigh_right_back_joint
+      - aaly__thigh_left_front_joint
+      - aaly__thigh_left_back_joint
+      - aaly__knee_right_front_joint
+      - aaly__knee_right_back_joint
+      - aaly__knee_left_front_joint
+      - aaly__knee_left_back_joint
